# framework

./: .editorconfig  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml  docs.yml  lint.yml
command_attr/: Cargo.toml
command_attr/src/: context.rs  impl_hook.rs  lib.rs  paths.rs  utils.rs
command_attr/src/impl_check/: mod.rs  options.rs
command_attr/src/impl_command/: mod.rs  options.rs
framework/: Cargo.toml
framework/src/: argument.rs  category.rs  check.rs  command.rs  configuration.rs  context.rs  error.rs  group.rs  lib.rs  parse.rs  prelude.rs
framework/src/parse/: content.rs  mod.rs  prefix.rs
framework/src/utils/: id_map.rs  segments.rs
master/: crates.js  index.html  search-index.js  source-files.js
master/command_attr/: all.html  attr.check.html  attr.command.html  attr.hook.html  index.html  sidebar-items.js
master/serenity_framework/: all.html  index.html  sidebar-items.js  struct.Framework.html  type.DefaultData.html  type.DefaultError.html
master/serenity_framework/argument/: enum.ArgumentError.html  enum.ParseEither.html  fn.optional_argument.html  fn.optional_argument_from_str.html  fn.optional_argument_parse.html  fn.required_argument.html  fn.required_argument_from_str.html  fn.required_argument_parse.html  fn.rest_argument.html  fn.rest_argument_from_str.html  fn.rest_argument_parse.html  fn.variadic_arguments.html  fn.variadic_arguments_from_str.html  fn.variadic_arguments_parse.html  index.html  sidebar-items.js  struct.ParseEitherError.html  trait.Argument.html
master/serenity_framework/category/: index.html  sidebar-items.js  struct.Category.html
master/serenity_framework/check/: enum.Reason.html  index.html  sidebar-items.js  struct.Check.html  struct.CheckBuilder.html  type.CheckConstructor.html  type.CheckFn.html  type.CheckResult.html
master/serenity_framework/command/: index.html  sidebar-items.js  struct.Command.html  struct.CommandBuilder.html  struct.CommandId.html  type.CommandConstructor.html  type.CommandError.html  type.CommandFn.html  type.CommandMap.html  type.CommandResult.html  type.StringHook.html  type.StringsHook.html
master/serenity_framework/configuration/: index.html  sidebar-items.js  struct.Configuration.html  type.DynamicPrefix.html
master/serenity_framework/context/: index.html  sidebar-items.js  struct.CheckContext.html  struct.Context.html  struct.PrefixContext.html
master/serenity_framework/error/: enum.DispatchError.html  enum.Error.html  index.html  sidebar-items.js
master/serenity_framework/group/: index.html  sidebar-items.js  struct.Group.html  struct.GroupBuilder.html  struct.GroupId.html  type.GroupConstructor.html  type.GroupMap.html
master/serenity_framework/parse/: fn.command.html  fn.commands.html  fn.content.html  fn.dynamic_prefix.html  index.html  (+4 more)
src/: check.rs  command.rs  configuration.rs  context.rs  error.rs  group.rs  lib.rs  parse.rs  prelude.rs  utils.rs
src/parse/: content.rs  mod.rs  prefix.rs  segments.rs
src/utils/: id_map.rs  mod.rs  segments.rs
tests/: framework.rs
(+84 files in other folders)
