[package]
name = "serenity_standard_framework"
version = "0.1.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uwl = "*"

[dependencies.serenity]
version = "0.9.0-rc.0"
default_features = false
features = ["client", "model", "gateway", "cache", "rustls_backend"]

[dev-dependencies]
tokio = { version = "*", features = ["macros"] }