[package]
name = "serenity_framework"
version = "0.1.0"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
edition = "2018"

[dependencies.serenity]
git = "https://github.com/kangalioo/serenity" # Replace with main serenity branch once merged
branch = "parse"
default_features = false
features = ["client", "model", "gateway", "cache", "rustls_backend"]

[dependencies.command_attr]
path = "../command_attr"
optional = true

[features]
default = ["macros"]
macros = ["command_attr"]
